choreo and writing updates

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -28,8 +28,17 @@ block content
             | is an evening-length work which premiered at ODC Theater in May 2022. 
             i Four by Four 
             | was made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.
+
+          p 
+            a(href="https://emilyhansel.me/fourbyfour/") 
+              button(tabindex="-1") Learn more about <i>Four by Four</i> 
+            br
+            br
+            a(href="https://emilyhansel.me/fourbyfour/program") 
+              button(tabindex="-1") Check out the program
           
-          p.left Press:
+          br
+          h5.left Press
           p.left
             <a href="https://emilyhansel.me/fourbyfour/heatherdesaulniers" target="_blank">Thoughts on “Four by Four”</a>
             br
