--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -52,7 +52,7 @@
       // border-bottom: 4px solid white
       opacity: 0
 
-      p.left
+      *.left
         text-align: left
 
       .visual
