--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -46,6 +46,11 @@ h4
   color: white
   text-transform: lowercase
 
+h5
+  font-size: 18px
+  margin: 0
+  color: white
+
 .flip
   -moz-transform: scaleX(-1)
   -o-transform: scaleX(-1)
