--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ block content
         span.menu-button(tabindex=0) works
         ul.sub-menu
           li: a.site-link(href="/choreography" alt="choreography") choreography
-          li: a.site-link(href="/fourbyfour" alt="Four by Four") Four by Four
+          li: a.site-link(href="/writing" alt="Four by Four") writing
       .menu-item
         span.menu-button(tabindex=0)  galleries
         ul.sub-menu
