remove other animations

--- a/digital-art/index.pug
+++ b/digital-art/index.pug
@@ -9,7 +9,7 @@ block content
   .rightImage
     img(src="../assets/img/insatiable.png")
   .body-container.bio
-    .bio-container.digital-art-container.no-animation
+    .bio-container.digital-art-container
       h1 Digital Art
       br 
       br
