--- a/fourbyfour/ask.pug
+++ b/fourbyfour/ask.pug
@@ -4,7 +4,7 @@ block title
   link(rel="stylesheet", href="../assets/css/index.css?v=3")
 block content
   .body-container.bio
-    .bio-container.no-animation
+    .bio-container
       p.
         Hello respected colleagues and friends,
       
