--- a/fourbyfour/audio.pug
+++ b/fourbyfour/audio.pug
@@ -7,7 +7,7 @@ block content
     h1.hero
       a(href="/fourbyfour")
         img(src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
-    .bio-container.no-animation
+    .bio-container
       p An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.
 
       p This audio description is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.
