--- a/fourbyfour/heatherdesaulniers.pug
+++ b/fourbyfour/heatherdesaulniers.pug
@@ -7,8 +7,8 @@ block content
   .home-button
     a(href="/" alt="Emily") 
       img.flip(src="../assets/img/dancing/crop/1.png") 
-  .body-container.bio.no-animation
-    .bio-container.no-animation
+  .body-container.bio
+    .bio-container
       h1 Thoughts on “Four by Four”
       p by Heather Desaulniers
         br
