--- a/fourbyfour/index.pug
+++ b/fourbyfour/index.pug
@@ -7,7 +7,7 @@ block content
     h1.hero
       a(href="/fourbyfour")
         img(src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%")
-    .bio-container.no-animation
+    .bio-container
       .heading 
         p 
           ul
