--- a/fourbyfour/kids.pug
+++ b/fourbyfour/kids.pug
@@ -7,7 +7,7 @@ block content
     h1.hero
       a(href="/fourbyfour")
         img(src="../../assets/img/fourbyfour/kids/title.png" alt="Theater takeover workshop with teacher Emily" width="96%")
-    .bio-container.no-animation
+    .bio-container
       p
         b Saturday, May 28th at 3:00pm
         br
