--- a/fourbyfour/program.pug
+++ b/fourbyfour/program.pug
@@ -7,7 +7,7 @@ block content
     h1.hero
       a(href="/fourbyfour/program")
         img(src="../../assets/img/fourbyfour/program_title.png" alt="Four by Four" width="90%")
-    .bio-container.no-animation
+    .bio-container
       .heading  
         ul
           li May 26-28, 2022
