--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -30,17 +30,17 @@ block content
             | was made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.
 
           p 
-            a(href="https://emilyhansel.me/fourbyfour/") 
+            a(href="/fourbyfour") 
               button(tabindex="-1") Learn more about <i>Four by Four</i> 
             br
             br
-            a(href="https://emilyhansel.me/fourbyfour/program") 
+            a(href="/fourbyfour/program") 
               button(tabindex="-1") Check out the program
           
           br
           h5.left Press
           p.left
-            <a href="https://emilyhansel.me/fourbyfour/heatherdesaulniers" target="_blank">Thoughts on “Four by Four”</a>
+            <a href="/fourbyfour/heatherdesaulniers">Thoughts on “Four by Four”</a>
             br
             | by Heather Desaulniers
           p.left
