--- a/photos/index.pug
+++ b/photos/index.pug
@@ -12,39 +12,41 @@ block content
         h1#photo Photos
         div(class="grid js-masonry" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 316, "fitWidth": true }')
           div.grid-item
-            img(src="../assets/img/dancing/masonry/28.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/28.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/15.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/15.jpg" data-action="zoom" data-caption="<i>Through and Through</i> | Choreography by Mia J. Chong | Photograph by RJ Muna | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/27.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/24.jpg" data-action="zoom" data-caption="<i>EPOCH</i> | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2021")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/25.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/25.jpg" data-action="zoom" data-caption="<i>EPOCH</i> | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2021")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/24.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/23.jpg" data-action="zoom" data-caption="<i>kid subjunctive</i> | Choreography by Christy Funsch | Photograph by Robbie Sweeny | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/23.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/22.jpg" data-action="zoom" data-caption="<i>say i am you</i> | Choreography by Moscelyne ParkeHarrison | Photograph by Natalia Perez | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/22.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/27.jpg" data-action="zoom" data-caption="Photograph by Tricia Cronin for Post:ballet | 2020")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/29.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/29.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/21.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/20.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/26.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/19.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/19.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/21.jpg" data-action="zoom" data-caption="Photograph by Maximillian Tortoriello | 2022")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/18.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/26.jpg" data-action="zoom" data-caption="Photograph by Tricia Cronin for Post:ballet | 2020")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/17.png" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/18.jpg" data-action="zoom" data-caption="<i>The Soft Solace of a Slightly Descended Lost Life (Suck It)</i> | Choreography by Robert Moses | Photograph by Steve Disenhof | 2021")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/16.jpg" data-action="zoom" data-caption="")
+            img(src="../assets/img/dancing/masonry/17.png" data-action="zoom" data-caption="Post:ballet's <i>Nutcracker</i> | Choreography by Robin Dekkers | Photograph by Reneff-Olson Productions | 2021")
+          div.grid-item
+            img(src="../assets/img/dancing/masonry/16.jpg" data-action="zoom" data-caption="<i>Through and Through</i> | Choreography by Mia J. Chong | Photograph by RJ Muna | 2022")
           div.grid-item
             img(src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="<i>The Exceptionally Elderly Overweight Black Man Phoenix</i> | Choreography by Robert Moses | Photograph by Jim Coleman | 2019")
           div.grid-item
             img(src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="<i>BIG SALT</i> | Photograph by Summer Wilson for The Anata Project | 2019")
           div.grid-item
-            img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="<i>Belong Not</i> | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020")
+            img(src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="<i>Belong Not</i> | Choreography by Chuck Wilt for Post:ballet | Photograph by Alexander Reneff-Olson | 2020")
           div.grid-item
             img(src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="<i>Roaratorio</i> | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019")
           div.grid-item
