update alt texts

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -14,7 +14,7 @@ block content
           h4 Knock
           h6 (In progress)
           p A work commissioned by Post:ballet for their collaboration with the Kronos Quartet which will premiere in April, 2023 at YBCA in San Francisco, CA
-        img.visual(src="../assets/img/choreo/knock.jpg" alt="Knock")
+        img.visual(src="../assets/img/choreo/knock.jpg" alt="Photo of 7 dancers")
       .choreo-box
         .copy
           h4 Four by Four
@@ -56,7 +56,7 @@ block content
             br
             | by Emily Hansel for the Life As A Modern Dancer blog
 
-        img.visual(src="../assets/img/choreo/four_by_four.jpg" alt="Four by Four")
+        img.visual(src="../assets/img/choreo/four_by_four.jpg" alt="Three dancer performing in Four by Four")
       .choreo-box
         .copy
           h4 Rabble
@@ -69,7 +69,7 @@ block content
             i Rabble 
             | was commissioned by Berkeley Ballet Theater and premiered at BAMPFA in March, 2022 in Berkeley, CA
 
-        img.visual(src="../assets/img/choreo/rabble.jpg" alt="Rabble")
+        img.visual(src="../assets/img/choreo/rabble.jpg" alt="18 teenagers performing in Rabble")
       .choreo-box
         .copy
           h4 Eight Whiskus
@@ -88,7 +88,7 @@ block content
             | Choreographed by Emily Hansel<br>
             i Secret Code 
             | was commissioned by the Lindenwood University Dance Program which premiered in November 2020 in St. Charles, MO
-        img.visual(src="../assets/img/choreo/secret_code.jpg" alt="Secret Code")
+        img.visual(src="../assets/img/choreo/secret_code.jpg" alt="Soloist performing Secret Code")
       .choreo-box
         .copy
           h4 PHANTOM
