--- a/index.pug
+++ b/index.pug
@@ -15,7 +15,7 @@ block content
           li: a.site-link(href="/bio" alt="bio") bio
           li: a.site-link(href="/assets/resume.pdf?v=2" target="_blank" alt="resume") resume
       .menu-item
-        span.menu-button(tabindex=0) works
+        span.menu-button(tabindex=0) work
         ul.sub-menu
           li: a.site-link(href="/choreography" alt="choreography") choreography
           li: a.site-link(href="/writing" alt="Four by Four") writing
