--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,6 @@
 :root {
+  --theme: #829af1;
   --mint: #00f1ff;
-  --pink: #ff81eb;
 }
 
 html,
@@ -132,7 +132,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  background: #112335;
+  background: black;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', sans-serif;
   font-style: normal;
@@ -142,34 +142,36 @@ body {
 
 * {
   box-sizing: border-box;
-  outline-color: var(--pink);
+  outline-color: var(--theme);
 }
 
 ::selection {
   color: white;
-  background: var(--pink);
+  background: var(--theme);
 }
 
 /* ———————————————————————————————————————————————————— */
 
 main {
-  padding: 48px 0 32px 64px;
+  /* padding: 48px 0 32px 64px; */
 }
 
 article {
   font-size: 16px;
-  font-family: Consolas, Menlo, Courier, monospace;
-
-  padding: 0 32px;
-  max-width: 680px; 
+  font-family: 'Lato', sans-serif;
+  /* max-width: 680px;  */
+  max-width: 60%; 
+  margin: 0 auto;
+  margin-top: 3rem;
 }
 
+
 nav {
-  position: absolute;
+  position: fixed;
   display: flex;
   gap: 4px;
-  top: 16px;
-  right: 16px;
+  top: 1rem;
+  left: 2rem;
   font-size: 24px;
 }
 
@@ -179,7 +181,8 @@ p, h1, h2, h3, h4, h5, h6, li {
 
 p {
   line-height: 26px;
-  margin-bottom: 0.75rem
+  margin-bottom: 0.75rem;
+  text-align: justify; /* TODO set this with a class */
 }
 
 .small {
@@ -191,8 +194,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 96px;
-  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 100;
   line-height: 1.25;
   margin-bottom: 1rem;
 }
@@ -212,12 +216,13 @@ h2.gap {
 }
 
 a {
-  color: var(--mint);
+  color: var(--theme);
+  font-weight: 700;
+  text-decoration: none;
 }
 
 a:hover {
-  background: rgba(255, 255, 255, 0.1);
-  text-decoration: none;
+  text-decoration: underline;
   cursor: pointer;
 }
 
@@ -244,6 +249,24 @@ li strong {
   font-size: x-small;
   margin-bottom: 1.5rem;
   color: var(--mint)
+}
+
+img.profile {
+  float: left;
+  margin: 0px 15px 0px 0px;
+  border-radius: 4px;
+}
+
+.credits {
+  padding: 16px 0;
+  margin-top: 2rem;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 12px;
+  font-family: monospace;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1000px) {
