update writing page

--- a/public/choreography/index.pug
+++ b/public/choreography/index.pug
@@ -38,7 +38,7 @@ block content
               button(tabindex="-1") Check out the program
           
           br
-          h5.left Press
+          h5.left <i>Four by Four</i> &nbsp;press
           p.left
             <a href="/fourbyfour/heatherdesaulniers">Thoughts on “Four by Four”</a>
             br
