--- a/public/writing/index.pug
+++ b/public/writing/index.pug
@@ -12,32 +12,42 @@ block content
       .choreo-box
         .copy
           h4: a(href="https://medium.com/odc-dance-stories/plenty-to-see-in-the-observatory-81f85a1ecfd4" target="_blank") There’s plenty going on in “The Observatory”
-          h6 (August 31st, 2022)
-          p ODC Dance Stories
+          p 
+            | August 31, 2022
+            br
+            | ODC Dance Stories
         img.visual(src="../assets/img/writing/observatory.jpeg" alt="Observatory")
       .choreo-box
         .copy
           h4: a(href="https://blog.lifeasamoderndancer.com/2022/07/holding-juxtaposition-post-performance-reflections-on-four-by-four-.html" target="_blank") Holding juxtaposition: post-performance reflections on "Four by Four"
-          h6 (July 4th, 2022)
-          p Life As A Modern Dancer Blog
+          p 
+            | July 4, 2022
+            br
+            | Life As A Modern Dancer Blog
         img.visual(src="../assets/img/choreo/four_by_four.jpg" alt="Four by Four")
       .choreo-box
         .copy
           h4: a(href="https://blog.lifeasamoderndancer.com/2022/01/empowering-dancers-through-contracts-by-emily-hansel.html" target="_blank") Empowering Dancers through Contracts
-          h6 (January 29th, 2022)
-          p Life As A Modern Dancer Blog
+          p 
+            | January 29, 2022
+            br
+            | Life As A Modern Dancer Blog
         img.visual(src="../assets/img/writing/laamd_1.jpg" alt="Rehearsal image from Life As A Modern Dancer Blog")
       .choreo-box
         .copy
           h4: a(href="https://blog.lifeasamoderndancer.com/2021/04/cultivating-healthy-equitable-workplaces-for-dancers.html" target="_blank") Cultivating Healthy, Equitable Workplaces for Dancers
-          h6 (April 4th, 2021)
-          p Life As A Modern Dancer Blog
+          p 
+            | April 4, 2021
+            br
+            | Life As A Modern Dancer Blog
         img.visual(src="../assets/img/writing/laamd_2.jpg" alt="Rehearsal image from Life As A Modern Dancer Blog")
       .choreo-box
         .copy
           h4: a(href="https://blog.lifeasamoderndancer.com/2021/01/relearning-agency-a-dancers-call-for-collective-action.html" target="_blank") Relearning Agency: A Dancer’s Call for Collective Action
-          h6 (January 9th, 2021)
-          p Life As A Modern Dancer Blog
+          p 
+            | January 9, 2021
+            br
+            | Life As A Modern Dancer Blog
         img.visual(src="../assets/img/writing/laamd_3.jpg" alt="Rehearsal image from Life As A Modern Dancer Blog")
 
     include ../pug/_footer.pug
