--- a/public/global.css
+++ b/public/global.css
@@ -129,9 +129,10 @@ table {
 
 html,
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+  /* TODO re-enable? */
+  /* -webkit-font-smoothing: antialiased; */ 
+  /* -moz-osx-font-smoothing: grayscale; */
+  /* text-rendering: optimizeLegibility; */
   background: black;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', sans-serif;
