--- a/public/index.pug
+++ b/public/index.pug
@@ -20,6 +20,9 @@ block content
           li: a.site-link(href="/choreography" alt="choreography") choreography
           li: a.site-link(href="/writing" alt="Four by Four") writing
       .menu-item
+        span.menu-button
+          a(href="/press") press
+      .menu-item
         span.menu-button(tabindex=0)  galleries
         ul.sub-menu
           li: a.site-link(href="/photos" alt="photos") photos
