choreo page updates

--- a/public/choreography/index.pug
+++ b/public/choreography/index.pug
@@ -17,6 +17,18 @@ block content
         img.visual(src="../assets/img/choreo/knock.jpg" alt="Photo of 7 dancers")
       .choreo-box
         .copy
+          h4 skull
+          h6 (2022)
+          p
+            | Concept, choreography, and performance by Emily Hansel<br />
+            | Music by Sophia Cotraccia<br />
+            | Filmed by Colin Frederick
+          p
+            i skull 
+            | is a short dance film commissioned by Dance Thrill Fest, "an annual dance film festival curated by REYES Dance featuring short dance film works from local bay area artists exploring themes of horror, thrill, comedy and everything in between." It premiered on October 26th, 2022 at the Roxie Theater, San Francisco, CA.          
+        iframe.visual(src="https://www.youtube.com/embed/yLoN1b8jCGU" height="240px" frameborder="0" allowfullscreen)
+      .choreo-box
+        .copy
           h4 Four by Four
           h6 (2022)
           p
