--- a/public/global.css
+++ b/public/global.css
@@ -261,6 +261,10 @@ img.profile {
   border-radius: 4px;
 }
 
+.list {
+  list-style: initial;
+}
+
 .credits {
   padding: 16px 0;
   margin-top: 2rem;
