--- a/public/global.css
+++ b/public/global.css
@@ -261,8 +261,30 @@ img.profile {
   border-radius: 4px;
 }
 
+img.hero {
+  width: 100%;
+  margin-bottom: 3rem;
+}
+
 .list {
   list-style: initial;
+}
+
+.btn-old a {
+  appearance: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  background: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 6px 8px;
+  font-size: 16px;
+  margin-right: 32px;
+  color: black;
+}
+
+.btn-old a:hover {
+  text-decoration: none;
 }
 
 .credits {
