--- a/public/global.css
+++ b/public/global.css
@@ -260,6 +260,7 @@ li strong {
 }
 
 img.headshot {
+  /* box-shadow: 0 0px 1px 1px rgba(255, 255, 255, 0.1); */
   display: inline-flex;
   margin: 0px 2rem 0.5rem 0px;
   border-radius: 4px;
@@ -271,7 +272,7 @@ img.headshot {
 }
 
 img.headshot:last-of-type {
-  margin: 0;
+  margin-right: 0;
 }
 
 img.profile {
