--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,7 @@
 :root {
-  --theme: #829af1;
+  --theme: hsl(131, 25%, 63%);
   --mint: #00f1ff;
-  --animation-duration: 2000ms;
+  --animation-duration: 3000ms;
 }
 
 html,
