--- a/public/global.css
+++ b/public/global.css
@@ -108,7 +108,7 @@ section {
   display: block;
 }
 ol,
-ul {
+/* ul  */ {
   list-style: none;
 }
 blockquote,
@@ -233,12 +233,9 @@ h1 a {
 }
 
 h2 {
-  margin-bottom: 1rem;
-  font-size: 20px;
-}
-
-h2.gap {
-  margin-top: 4rem;
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+  font-size: 24px;
 }
 
 a {
@@ -253,16 +250,16 @@ a:hover {
 }
 
 ul {
-  margin-left: 1ch;
+  margin-left: 1rem;
 }
 
 li {
-  margin-bottom: 12px;
+  margin-bottom: 0.75rem;
   padding-inline-start: 1ch;
 }
 
 li::marker {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 img.headshot {
@@ -305,6 +302,10 @@ figcaption p {
 
 .list {
   list-style: initial;
+}
+
+.left {
+  text-align: left !important;
 }
 
 .btn-old a {
