--- a/public/global.css
+++ b/public/global.css
@@ -140,6 +140,7 @@ body {
   font-style: normal;
   text-transform: initial;
   letter-spacing: initial;
+  scroll-behavior: smooth !important;
 }
 
 * {
@@ -236,6 +237,14 @@ h2 {
   margin-top: 4rem;
   margin-bottom: 1.5rem;
   font-size: 24px;
+  line-height: 32px;
+}
+
+h3 {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-size: 20px;
+  line-height: 28px;
 }
 
 a {
@@ -290,8 +299,31 @@ img.hero {
   margin-bottom: 3rem;
 }
 
+img.photo-row {
+  width: calc((100% - 1rem) / 3);
+  height: auto;
+  margin-top: 3rem;
+  margin-left: 0.5rem;
+  border-radius: 2px;
+}
+
+img.photo-row:first-of-type {
+  margin-left: 0;
+}
+
+img.study-hall-headshot {
+  float: left;
+  object-fit: cover;
+  margin: 0 1rem 1rem 0;
+  border-radius: 2px;
+  width: 225px;
+  height: 225px;
+  aspect-ratio: 1;
+}
+
 figcaption,
-figcaption p {
+figcaption p,
+p.figcaption {
   font-style: italic;
   font-weight: 300;
   font-size: small;
@@ -309,6 +341,14 @@ figcaption p {
   text-align: left !important;
 }
 
+.center {
+  text-align: center !important;
+}
+
+.clearfix {
+  clear: both;
+}
+
 .btn-old a {
   appearance: none;
   cursor: pointer;
@@ -324,6 +364,12 @@ figcaption p {
 
 .btn-old a:hover {
   text-decoration: none;
+}
+
+@media (prefers-reduced-motion) {
+  html {
+    scroll-behavior: auto !important;
+  }
 }
 
 @media screen and (max-width: 1000px) {
