--- a/public/global.css
+++ b/public/global.css
@@ -129,7 +129,6 @@ table {
 
 html,
 body {
-  /* TODO re-enable? */
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
   /* text-rendering: optimizeLegibility; */
@@ -193,7 +192,7 @@ p {
   font-size: 16px;
   font-weight: 300;
   line-height: 22px;
-  text-align: justify; /* TODO set this with a class */
+  text-align: justify;
   word-wrap: break-word;
   margin-bottom: 1rem;
 }
