--- a/public/global.css
+++ b/public/global.css
@@ -337,6 +337,10 @@ img.study-hall-icon {
   margin-right: 6px;
 }
 
+img.study-hall-header-icon {
+  margin-left: 6px;
+}
+
 figcaption,
 figcaption p,
 p.figcaption {
